--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
             "/Tests/"
         ]
     },
+    "require": {
+        "php": "^7.1"
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
     }
