--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
-    }
+        "phpunit/phpunit": "^7.5",
+        "symfony/console": "^3.0|^4.0"
+    },
+    "bin": ["bin/warehouse"]
 }
